--- a/SuperSensor.yml
+++ b/SuperSensor.yml
@@ -1,8 +1,8 @@
 ---
 - hosts: Centos7
 - name: Download SuporSensor
- get_url:
-  url: https://www.dropbox.com/s/dlzlcnwt4xzz1rm/beta.sh
-  dest: /var/prtg/scriptsxml/SuperSensor.sh
-  mode: 0755
+- get_url:
+    url: https://www.dropbox.com/s/dlzlcnwt4xzz1rm/beta.sh
+    dest: /var/prtg/scriptsxml/SuperSensor.sh
+    mode: 0755
 ...
