--- a/SuperSensor.yml
+++ b/SuperSensor.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: Centos7
 - name: Download SuporSensor
-- get_url:
+  get_url:
     url: https://www.dropbox.com/s/dlzlcnwt4xzz1rm/beta.sh
     dest: /var/prtg/scriptsxml/SuperSensor.sh
     mode: 0755
