--- a/SuperSensor.yml
+++ b/SuperSensor.yml
@@ -1,6 +1,15 @@
 ---
 - hosts: Centos7
-- name: Download SuporSensor
+  tasks:
+  - name: Creates directory
+  file:
+    path: /var/prtg/scriptsxml
+    state: directory
+    owner: root
+    group: root
+    mode: 0775
+    recurse: yes
+  - name: download beta.sh as SuperSensor.sh
   get_url:
     url: https://www.dropbox.com/s/dlzlcnwt4xzz1rm/beta.sh
     dest: /var/prtg/scriptsxml/SuperSensor.sh
