--- a/SuperSensor.yml
+++ b/SuperSensor.yml
@@ -11,7 +11,8 @@
     mode: 0775
     recurse: yes
  
-  - git:
+  -name: Get the sctipt from Git 
+  git:
     repo: 'https://github.com/dscalf23/scripts/blob/master/SuperSensor.sh'
     dest: /var/prtg/scriptsxml/SuperSensor.sh
     
