Fixed sytax erors

--- a/SuperSensor.yml
+++ b/SuperSensor.yml
@@ -9,10 +9,8 @@
     owner: root
     group: root
     mode: 0775
-    recurse: yes
  
-  - name: Get the sctipt from Git 
-  git:
+- git:
     repo: 'https://github.com/dscalf23/scripts/blob/master/SuperSensor.sh'
     dest: /var/prtg/scriptsxml/SuperSensor.sh
-    
+...
