--- a/SuperSensor.yml
+++ b/SuperSensor.yml
@@ -1,16 +1,15 @@
 ---
 - hosts: Centos7
-  tasks:
- 
+- tasks:
   - name: Creates directory
-  file:
-    path: /var/prtg/scriptsxml
-    state: directory
-    owner: root
-    group: root
-    mode: 0775
- 
-- git:
-    repo: 'https://github.com/dscalf23/scripts/blob/master/SuperSensor.sh'
-    dest: /var/prtg/scriptsxml/SuperSensor.sh
-...
+    file:
+      path: /var/prtg/scriptsxml
+      state: directory
+      owner: root
+      group: root
+      mode: 0775
+
+  - name: Get the sctipt from Git 
+    git:
+      repo: 'https://github.com/dscalf23/scripts/blob/master/SuperSensor.sh'
+      dest: /var/prtg/scriptsxml/SuperSensor.sh
