--- a/SuperSensor.yml
+++ b/SuperSensor.yml
@@ -10,6 +10,7 @@
       mode: 0775
 
   - name: Get the sctipt from Git 
-    git:
-      repo: 'https://github.com/dscalf23/scripts/blob/master/SuperSensor.sh'
+    get_url:
+      url: 'https://github.com/dscalf23/scripts/blob/master/SuperSensor.sh'
       dest: /var/prtg/scriptsxml/SuperSensor.sh
+      mode: 0775
