--- a/SuperSensor.yml
+++ b/SuperSensor.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: Centos7
+- hosts: Linux
   tasks:
   - name: Creates directory
     file:
@@ -9,7 +9,7 @@
       group: root
       mode: 0775
 
-  - name: Get the sctipt from Git 
+  - name: Get the sctipt from Github (wget) 
     get_url:
       url: 'https://github.com/dscalf23/scripts/blob/master/SuperSensor.sh'
       dest: /var/prtg/scriptsxml/SuperSensor.sh
