--- a/SuperSensor.yml
+++ b/SuperSensor.yml
@@ -11,6 +11,6 @@
 
   - name: Get the sctipt from Github (wget) 
     get_url:
-      url: 'https://github.com/dscalf23/scripts/blob/master/SuperSensor.sh'
+      url: 'https://raw.githubusercontent.com/dscalf23/scripts/master/SuperSensor.sh'
       dest: /var/prtg/scriptsxml/SuperSensor.sh
       mode: 0775
