--- a/UbuntuPython.yml
+++ b/UbuntuPython.yml
@@ -1,8 +1,5 @@
 ---
 - hosts: all
-  sudo: yes
-  remote_user: root
-  gather_facts: no
   tasks:
   - name: 'install python2'
-    raw: sudo apt-get -y install python python-simplejson
+    raw: apt-get -y install python python-simplejson
