--- a/Mosh.yml
+++ b/Mosh.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: all
-  tasks:
+  - tasks:
   - apt: name=$item state=latest
     with_items:
       - mosh
@@ -9,14 +9,3 @@
     with_items:
       - mosh
     when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
-  - ufw:
-    - rule: allow
-    - name: MOSH
-    - port: 60000:61000
-    - proto: udp
-    - when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
-  - firewalld:
-    - port: 60000-61000/udp
-    - permanent: true
-    - state: enabled
-    - when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
