--- a/Mosh.yml
+++ b/Mosh.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: all
   tasks:
-  - apt: name=mosh state=latest
+  - apt: update_cache=yes name=mosh state=latest
     when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
-  - yum: name=mosh state=latest
+  - yum: update_cache=yes name=mosh state=latest
     when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
