--- a/IsLinux.yml
+++ b/IsLinux.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: all
   tasks:
-    - name: "Presume host to not belong to subnet"
-      - set_fact:
+    name: "Mark as Linux"
+      set_fact:
         is_linux: True
         when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux' or ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
