--- a/SuperSensor.yml
+++ b/SuperSensor.yml
@@ -11,7 +11,7 @@
 
   - name: Get the sctipt from Github (wget) 
     get_url:
-      url: 'https://raw.githubusercontent.com/dscalf23/scripts/master/SuperSensor.sh'
-      dest: /var/prtg/scriptsxml/SuperSensor.sh
+      url: 'https://raw.githubusercontent.com/dscalf23/scripts/master/SuperSensorV2.py'
+      dest: /var/prtg/scriptsxml/SuperSensor.py
       mode: 0775
       force: yes
