--- a/SuperSensor.yml
+++ b/SuperSensor.yml
@@ -17,7 +17,7 @@
       force: yes
 
   - name: Installs Python & PIP
-    - apt:
+    apt:
       update_cache: yes
       name: "{{ packages }}"
       state: latest
@@ -49,7 +49,7 @@
         - python-dev
         - libssl-dev
       when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
-    - yum: 
+    yum: 
       update_cache: yes
       name: "{{ packages }}"
       state: latest
@@ -67,6 +67,5 @@
       when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
 
   - name: Pip install psutil
-    - pip:
+    pip:
       name: psutil
-      
