--- a/SuperSensor.yml
+++ b/SuperSensor.yml
@@ -20,7 +20,7 @@
     apt_repository:
       repo: "deb http://us.archive.ubuntu.com/ubuntu {{ ansible_distribution_release|lower }} universe"
       state: present
-    when: when: ansible_distribution == 'Ubuntu'
+    when: ansible_distribution == 'Ubuntu'
 
   - name: Install EPEL repo.
     yum:
