cloud75 will be pwnd

--- a/SuperSensor.yml
+++ b/SuperSensor.yml
@@ -16,19 +16,18 @@
       mode: 0775
       force: yes
 
-  - name: ubuntu | ensuring Ubuntu universe repo is enabled ({{ ansible_distribution_version }} is LTS)
+  - name: ubuntu | ensuring Ubuntu universe repo is enabled ({{ ansible_distribution_version }} LTS)
     apt_repository:
       repo: "deb http://us.archive.ubuntu.com/ubuntu {{ ansible_distribution_release|lower }} universe"
       state: present
     when: ansible_distribution_version == '14.04' or ansible_distribution_version == '16.04' or ansible_distribution_version == '18.04'
 
-  - name: ubuntu | ensuring Ubuntu universe repo is enabled ({{ ansible_distribution_version }} is Old Release)
-    apt_repository:
-      repo: "deb http://old-releases.archive.ubuntu.com/ubuntu {{ ansible_distribution_release|lower }} universe"
-      state: present
+  - name: ubuntu | ensuring Ubuntu universe repo is enabled ({{ ansible_distribution_version }} Old Release)
+    raw: echo "deb http://old-releases.ubuntu.com/ubuntu/ {{ ansible_distribution_release|lower }} universe" >> /etc/apt/sources.list 
+
     when: ansible_distribution_version == '14.10' or ansible_distribution_version == '15.04' or ansible_distribution_version == '15.10' or ansible_distribution_version == '16.10' or ansible_distribution_version == '17.04'
 
-  - name: ubuntu | ensuring Ubuntu universe repo is enabled ({{ ansible_distribution_version }} is LTS)
+  - name: ubuntu | Updating Apt)
     raw: apt-get update
     when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
 
